# indoorjson-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml
include/: cell_boundary.h  cell_space.h  connection.h  dual_space_layer.h  edge.h  feature.h  id_lookup.h  indoor_features.h  inter_layer_connection.h  node.h  primal_space_layer.h  ptr.h  serialization.h  thematic_layer.h
src/: id_lookup.cpp  main.cpp
src/serialization/: cell_boundary.cpp  cell_space.cpp  connection.cpp  dual_space_layer.cpp  edge.cpp  feature.cpp  geometry.cpp  indoor_features.cpp  node.cpp  primal_space_layer.cpp  thematic_layer.cpp
tests/: test_deserialization.cpp  test_edge.cpp  test_entry.h  test_feature.cpp  test_node.cpp  test_serialization.cpp  test_thematic_layer.cpp
tests/resources/: case1.json
